RESOLVED FIXED40243
[Qt] ContextMenuClientQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40243
Summary [Qt] ContextMenuClientQt.cpp has coding-style errors
Anders Bakken
Reported 2010-06-07 11:39:47 PDT
[Qt] ContextMenuClientQt.cpp has coding-style errors
Attachments
Patch (1.22 KB, patch)
2010-06-07 11:40 PDT, Anders Bakken
levin: review-
coding style changed to include RefCounted.h header wrt to wtf (1.09 KB, patch)
2011-01-30 18:22 PST, Srikumar B
no flags
Anders Bakken
Comment 1 2010-06-07 11:40:15 PDT
David Levin
Comment 2 2010-06-09 09:35:27 PDT
Comment on attachment 58056 [details] Patch WebKit/qt/WebCoreSupport/ContextMenuClientQt.cpp:33 + #include "RefCounted.h" This should be included like this #include <wtf/RefCounted.h>
Srikumar B
Comment 3 2011-01-30 18:22:39 PST
Created attachment 80609 [details] coding style changed to include RefCounted.h header wrt to wtf coding style changed to include RefCounted.h header wrt to wtf
WebKit Commit Bot
Comment 4 2011-01-31 17:27:14 PST
Comment on attachment 80609 [details] coding style changed to include RefCounted.h header wrt to wtf Clearing flags on attachment: 80609 Committed r77183: <http://trac.webkit.org/changeset/77183>
WebKit Commit Bot
Comment 5 2011-01-31 17:27:19 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.