Source/WebKit/qt/WebCoreSupport/ContextMenuClientQt.cpp
@@ -29,8 +29,8 @@
 #include "ContextMenu.h"
 #include "HitTestResult.h"
 #include "KURL.h"
-#include "RefCounted.h"
 #include "NotImplemented.h"
+#include <wtf/RefCounted.h>
 
 #include <stdio.h>
 
